refactor: rename instances of "Neo" to "Adi" across admin and store applications, updating relevant metadata and documentation

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -1,7 +1,7 @@
 {
   "name": "neo-admin",
   "version": "0.1.0",
-  "description": "this is Neo-admin built with react.js and tailwindcss",
+  "description": "this is Adi-admin built with react.js and tailwindcss",
   "private": true,
   "type": "module",
   "dependencies": {
