--- a/apps/admin/public/manifest.json
+++ b/apps/admin/public/manifest.json
@@ -6,8 +6,8 @@
   "scope": ".",
   "start_url": ".",
   "id": ".",
-  "short_name": "Neo - Admin",
-  "name": "Neo - React eCommerce Admin Dashboard",
+  "short_name": "Adi - Admin",
+  "name": "Adi - React eCommerce Admin Dashboard",
   "description": "React Grocery & Organic Food Store e-commerce Admin Dashboard",
   "icons": [
     {
