--- a/apps/store/public/manifest.json
+++ b/apps/store/public/manifest.json
@@ -6,8 +6,8 @@
   "scope": "/",
   "start_url": "/",
   "id": "/",
-  "short_name": "Neo - Store",
-  "name": "Neo",
+  "short_name": "Adi - Store",
+  "name": "Adi",
   "description": "Electronics mart",
   "icons": [
     {
