fix(workflow): correct directory path for admin build process in deployment workflow

--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -29,7 +29,7 @@ jobs:
             npm run build
 
             # Restart other services
-            cd apps/admin
+            cd ../admin
             npm run build
 
             pm2 restart adi-backend
