--- a/apps/store/package.json
+++ b/apps/store/package.json
@@ -51,6 +51,7 @@
     "react-loading-skeleton": "^3.3.1",
     "react-otp-input": "^3.1.1",
     "react-paginate": "^8.1.3",
+    "react-qr-code": "^2.0.15",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.2",
     "react-responsive-carousel": "^3.2.23",
