--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -21,16 +21,16 @@ jobs:
             git pull origin master
 
             # Install dependencies for all repos
-            npm install --force
+            pnpm install --force
 
             # Build and restart store
             cd apps/store
             rm -rf .next
-            npm run build
+            pnpm build
 
             # Restart other services
             cd ../admin
-            npm run build
+            pnpm build
 
             pm2 restart adi-backend
             pm2 restart adi-admin
